mynginx-newsimple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx
  namespace: default
spec: 
  replicas: 1  
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-default-mynginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-default-mynginx
    spec:
      containers:
      - name: static-website
        image: harbor-local.suselabs.com/local/my-static-website
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
