mynginx-rev2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx
  namespace: default
spec: 
  replicas: 1  
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-default-mynginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-default-mynginx
    spec:
      affinity: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: mynginx
        ports:
        - containerPort: 80
          name: mynginx-np
          protocol: TCP
      volumeMounts:
          - mountPath: /usr/share/nginx/html
            subPath: example-static-website
            name: static-website-volume
      volumes:
        - name: static-website-volume
          gitRepo:
            repository: https://github.com/firefhtr/realsimple.git
