mynginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx
  labels:
    app: mynginx
  namespace: default
spec:
  ports:
  - name: mynginx-np
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-mynginx
  type: NodePort
