mynginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-in
  namespace: default 
spec:
  defaultBackend:
    service:
      name: mynginx
      port:
        number: 80
  rules:
  - host: sslip.io
    http:
      paths:
      - backend:
          service:
            name: mynginx
            port:
              number: 80
        pathType: ImplementationSpecific
